# privanote

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/backend/: settings.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
